--- a/styles.css
+++ b/styles.css
@@ -1,66 +1,77 @@
+body {
+    max-width: 80%;
+    margin: 0 auto;
+}
+
 nav {
-    background-color: lightblue;
+    background-color: red;
     display: flex;
     flex-direction: row;
+    padding: 20px 0px;
     justify-content: center;
-    width: 100%;
-    height: 5%;
+    height: 10vh;
+}
+
+#menu {
+    display: flex;
+    flex-direction: row;
+    padding: 20px 10px;
+    font-size: x-large;
+}
+
+select, button {
+    font-size: x-large;
 }
 
 * div {
     border-style: solid;
     border-width: 2px;
 }
-#race-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-content: center;
-    height: 100vh;
-    width: 100vw;   
-}
+
 #podium-container {
     display: flex;
     flex-direction: row;
+    justify-items: space-between;
     justify-content: center;
-    align-content: center;
     align-items: center;
-    padding: 50px 50px;
-    margin: 50px 50px;
-    width: 90vw;
-    height: 90vh;
+    align-content:space-between;
 }
 .results-container {
     display: flex;
     flex-direction: column;
-    padding: 20px 20px;
-    width: 90vw;
-    height: 90vh;
+    justify-items:center;
+    align-items: center;
+    width: 30%;
+    height: 100vh;
 }
+
 #second-place {
     display: flex;
     order: -1;
 }
+
 .results {
-    padding: 20px 20px;
-    position: relative;
-    top: 10px;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+    width: 70%;
+    font-size: x-large;
 }
 .podium {
     display: flex;
     position: absolute;
     bottom: 0; 
-    justify-content: center;
-    align-content: center;
-    height: 30%;
 }
 #podium-1 {
     background-color: gold;
-    
+    height: 40%;   
 }
 #podium-2 {
     background-color: silver;
+    height: 30%;
 }
 #podium-3 {
     background-color: brown;
+    height: 20%;
 }
