--- a/styles.css
+++ b/styles.css
@@ -35,49 +35,72 @@ nav {
 #menu {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    padding: 10px 30px;
+    border-style: none;
     font-size: x-large;
     font-weight: bold;
-    width: 70%;
+    width: 50%;
 }
 
-#drop-down * {
+#drop-down {
     display: flex;
+    width: 100%;
+    justify-content: space-between;
 }
 
 label {
     display: flex;
-    text-align: center;
     align-items: center;
 }
 
 select, button {
     display: flex;
     font-size: x-large;
+    background-color: #D7D6D8;
+    color: black;
     font-family: 'Architects Daughter', cursive, Arial, Helvetica, sans-serif;
     border-radius: 10%;
-    opacity: .5;
+    opacity: .7;
     cursor: pointer;
     transition: 100ms;
 }
 
 select:hover, button:hover {
     opacity: 1;
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 
 select {
-    margin: 0 50px;
+    margin-left: 20px;
+}
+
+#button {
+    margin-left: 20px;
+}
+
+/* **********DIRECTIONS DIV STYLING********** */
+
+#instructions {
+    border-style: none;
+}
+
+#instructions h4 {
+    display: flex;
+    justify-content: center;
+    font-size: x-large;
+    margin: 0 auto;
+    padding: 10px 0;
 }
 
 
 /* **********PODIUM CONTAINER STYLING********** */
 
 #podium-container {
+    background-image: url("Pictures/210-2105378_martini-racing-stripes.jpg");
+    z-index: 0;
+    background-size:contain;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     justify-items: center;
     align-content:space-around;
     padding: 20px;
@@ -87,7 +110,9 @@ select {
 
 .results-container {
     display: flex;
+    border-style: none;
     flex-direction: column;
+    align-items: center;
     justify-content: flex-end;
     width: 25%;
 }
@@ -115,10 +140,15 @@ select {
 .results {
     display: flex;
     flex-direction: column;
+    background-color: #F5F5EF;
+    position: relative;
+    z-index: 1;
+    width: 75%;
+    align-content: space-between;
     text-align: center;
     font-size: x-large;
-    padding: 10%;
-    margin: 10%;
+    padding: 0 0 10px 0;
+    margin: 10px;
     border-radius: 5%;
 }
 
@@ -128,9 +158,15 @@ select {
     margin: 0 auto;
 }
 
+* h3, * h5 {
+    margin: 2%;
+}
+
 .podium {
     display: flex;
     flex-direction: column;
+    border-radius: 5%;
+    width: 75%;
     text-align: center;
     font-size: xx-large;
     position: relative;
@@ -138,16 +174,92 @@ select {
 }
 #podium-1 {
     background-color: #DEDB06;
-    height: 60%;   
+    height: 75%;   
 }
 #podium-2 {
     background-color: #BDBCBB;
-    height: 40%;
+    height: 50%;
 }
 #podium-3 {
     background-color: #A78882;
-    height: 30%;
+    height: 35%;
 }
 
 
-/* **********RESULTS AND PODIUM STYLING********** */
+/* **********MEDIA WIDTH CHANGES********** */
+
+@media only screen and (max-width: 1110px) {
+    #menu {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        padding: 10px 10px;
+        font-size: medium;
+        font-weight: bold;
+    } 
+
+    label {
+        display: flex;
+        position: relative;
+        text-align: center;
+        align-items: center;
+        font-size: medium;
+        font-weight: bold;
+    }
+
+    #menu select {
+        display: flex;
+        font-size: medium;
+        justify-content: center;
+    }
+
+    #menu button {
+        display: flex;
+        font-size: medium;
+        justify-content: center;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    #menu {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        padding: 10px 10px;
+        font-size: small;
+        font-weight: bold;
+    } 
+
+    label {
+        display: flex;
+        position: relative;
+        text-align: center;
+        align-items: center;
+        font-size: small;
+        font-weight: bold;
+    }
+
+    #menu select {
+        display: flex;
+        font-size: small;
+        justify-content: center;
+    }
+
+    #menu button {
+        display: flex;
+        font-size: small;
+        justify-content: center;
+    }
+
+    .results {
+        font-size: medium;
+    }
+
+    .results button {
+        font-size: small;
+    }
+
+    .podium {
+        font-size: medium;
+    }
+}
