--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ nav {
     border-style: none;
     font-size: x-large;
     font-weight: bold;
-    width: 50%;
+    width: 70%;
 }
 
 #drop-down {
@@ -210,6 +210,7 @@ select {
     #menu select {
         display: flex;
         font-size: medium;
+        width: 100%;
         justify-content: center;
     }
 
@@ -218,9 +219,22 @@ select {
         font-size: medium;
         justify-content: center;
     }
+
+    #instructions h4 {
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        font-size: x-large;
+        margin: 0 auto;
+        padding: 10px 0;
+    }
 }
 
 @media only screen and (max-width: 800px) {
+    body {
+        width: 100%;
+    }
+    
     #menu {
         display: flex;
         flex-direction: row;
@@ -251,6 +265,15 @@ select {
         justify-content: center;
     }
 
+    #instructions h4 {
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        font-size: x-large;
+        margin: 0 auto;
+        padding: 10px 0;
+    }
+
     .results {
         font-size: medium;
     }
@@ -263,3 +286,185 @@ select {
         font-size: medium;
     }
 }
+
+@media only screen and (max-width: 650px) {
+    
+    body {
+        width: 100%;
+    }
+    
+    #nav-bar {
+        display: flex;
+        justify-content: center;
+        justify-items: center;
+        width: 100%;
+        margin: 0 auto;
+    }
+    #menu {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        justify-items: center;
+        width: 100%;
+        font-size: small;
+        font-weight: bold;
+    } 
+
+    label {
+        display: flex;
+        position: relative;
+        text-align: center;
+        align-items: center;
+        font-size: small;
+        font-weight: bold;
+    }
+
+    #menu select {
+        display: flex;
+        font-size: small;
+        justify-content: center;
+    }
+
+    #menu button {
+        display: flex;
+        font-size: small;
+        justify-content: center;
+    }
+
+    #instructions h4 {
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        font-size: x-large;
+        margin: 0 auto;
+        padding: 10px 0;
+    }
+
+    .results-container {
+        width: 100%;
+    }
+    .results {
+        font-size: medium;
+    }
+
+    .results button {
+        font-size: small;
+    }
+
+    .podium {
+        font-size: medium;
+    }
+}
+
+
+@media only screen and (max-width: 450px) {
+    
+    body {
+        width: 100%;
+    }
+    
+    #nav-bar {
+        display: flex;
+        justify-content: center;
+        justify-items: center;
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        margin: 0 auto;
+    }
+
+    #menu {
+        display: flex;
+        justify-content: space-evenly;
+        justify-items: center;
+        height: 100%;
+        width: 100%;
+        font-size: small;
+        font-weight: bold;
+    } 
+
+    label {
+        display: flex;
+        position: relative;
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+        font-size: small;
+        font-weight: bold;
+    }
+
+    #menu select {
+        display: flex;
+        font-size: small;
+        justify-content: center;
+    }
+
+    #menu button {
+        display: flex;
+        font-size: small;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #instructions h4 {
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        font-size: medium;
+        margin: 0 auto;
+        padding: 10px 0;
+    }
+
+    #podium-container {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        justify-content: center;
+        align-content: center;
+    }
+
+    .results-container {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+    }
+    .results {
+        font-size: medium;
+        display: flex;
+        padding: 0;
+        margin: 0;
+        align-content: center;
+        align-items: center;
+        justify-content: center;
+        justify-items: center;
+    }
+
+    .results button {
+        font-size: small;
+    }
+
+    .podium {
+        display: none;
+    }
+
+    #first-place {
+        display: flex;
+        order: 0; 
+    }
+
+    #second-place {
+        display: flex;
+        order: 1; 
+    }
+
+    #third-place {
+        display: flex;
+        order: 2; 
+    }
+}
+
+
+
+
