flexbox added to driverpage

--- a/mainpagestyles.css
+++ b/mainpagestyles.css
@@ -64,6 +64,11 @@ select, button {
     transition: 100ms;
 }
 
+button {
+    border-style:groove;
+    background-color: #E6E2E2;
+    box-shadow: 0px 3px 5px #555454;
+}
 select:hover, button:hover {
     opacity: 1;
     transform: scale(1.1);
