--- a/driverpagestyles.css
+++ b/driverpagestyles.css
@@ -2,15 +2,24 @@ body {
     display: flex;
     flex-direction: column;
     max-width: 80%;
-    align-items: center;
+    margin: 0 auto;
     border-style: solid;
     font-family: 'Architects Daughter', cursive, Arial, Helvetica, sans-serif;
 }
+
+#background-container {
+    background-image: url("Pictures/vertical-stripes.jpg");
+    background-position:center;
+    overflow: hidden;
+    z-index: -1;
+}
+
 nav {
-    border-style: solid;
+    border-style: none;
     background-color: #D30F0F;
     display: flex;
     flex-direction: column;
+    width: 100%;
     justify-content: space-between;
     align-items: center;
 }
@@ -21,22 +30,68 @@ nav {
 }
 
 header {
-    border-style: solid;
+    border-top: solid;
+    border-bottom: solid;
     display: flex;
     justify-content: center;
     font-size: x-large;
+    background-color: white;
+    z-index: 1;
+}
+
+button {
+    background-color: #D7D6D8;
+    color: black;
+    font-family: 'Architects Daughter', cursive, Arial, Helvetica, sans-serif;
+    border-radius: 10%;
+    opacity: .7;
+    cursor: pointer;
+    transition: 100ms;
+    border-style:groove;
+    background-color: #E6E2E2;
+    box-shadow: 0px 3px 5px #555454
+}
+
+button:hover {
+    opacity: 1;
+    transform: scale(1.1);
+}
+
+#page-button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 5px 0 0 0;
+}
+
+.nav-button {
+    display: flex;
+    margin: 0 5px;
 }
 
 #driver-list {
     display: flex;
-    width: 80%;
     flex-direction: row;
     flex-wrap:wrap;
+    width: 100%;
     justify-content: space-around;
     align-items: center;
 }
 
 .driver-info {
     border-style: solid;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 15%;
+    height: auto;
+    margin: 5px 0;
+    background-color: #F5F5EF;
+    z-index: 1;
 }
 
+.details-button {
+    display: flex;
+    align-content: space-between;
+    margin: 0 0 5px 0;
+}
