--- a/driverpagestyles.css
+++ b/driverpagestyles.css
@@ -37,21 +37,17 @@ body {
     margin: 2px;
 }
 
-
-
-#background-container {
-    background-image: url("Pictures/vertical-stripes.jpg");
-    background-position:center;
-    overflow: hidden;
-}
+/* **********NAV STYLING********** */
 
 nav {
     border-style: solid;
     border-width: 4px;
+    border-radius: 10px;
     background-color: #D30F0F;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    height: 10%;
+    padding: 20px 0;
     justify-content: space-between;
     align-items: center;
 }
@@ -61,18 +57,24 @@ nav {
     font-weight: bold;
 }
 
+/* **********DIRECTION HEADER STYLING********** */
+
 #directions {
     display: flex;
     justify-content: center;
     font-size: x-large;
+    font-weight: bold;
+    text-align: center;
     background-color: white;
 }
+
+/* **********BUTTON STYLING********** */
 
 button {
     background-color: #D7D6D8;
     color: black;
     font-family: 'Architects Daughter', cursive, Arial, Helvetica, sans-serif;
-    border-radius: 10%;
+    border-radius: 10px;
     opacity: .7;
     cursor: pointer;
     transition: 100ms;
@@ -89,13 +91,27 @@ button:hover {
 #page-button {
     display: flex;
     flex-direction: row;
-    justify-content: center;
     padding: 5px 0 0 0;
+    justify-content: space-between;
+    width: 80%;
 }
 
 .nav-button {
     display: flex;
     margin: 0 5px;
+}
+
+/* **********DRIVER CONTAINER********** */
+
+#driver-container {
+    background-image: url("Pictures/vertical-stripes.jpg");
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-style: solid;
+    border-width: 4px;
+    border-radius: 10px;
 }
 
 #driver-list {
@@ -110,6 +126,8 @@ button:hover {
 
 .driver-info {
     border-style: solid;
+    border-width: 4px;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -119,8 +137,40 @@ button:hover {
     background-color: #F5F5EF;
 }
 
+.name-div {
+    font-weight: bold;
+    text-align: center;
+}
+
 .details-button {
     display: flex;
     align-content: space-between;
     margin: 0 0 5px 0;
+}
+
+/* **********MEDIA CHANGES for 800px********** */
+
+@media only screen and (max-width: 1200px) {
+    .driver-info {
+        width: 20%;
+    } 
+}
+
+
+@media only screen and (max-width: 950px) {
+    .driver-info {
+        width: 30%;
+    } 
+}
+
+@media only screen and (max-width: 600px) {
+    .driver-info {
+        width: 40%;
+    } 
+}
+
+@media only screen and (max-width: 450px) {
+    .driver-info {
+        width: 90%;
+    } 
 }
