--- a/mainpagestyles.css
+++ b/mainpagestyles.css
@@ -13,6 +13,7 @@ body {
 * div {
     border-style: solid;
     border-width: 4px;
+    border-radius: 10px;
 }
 
 /* **********TOP HEADER STYLING********** */
@@ -55,7 +56,7 @@ nav {
     border-style: solid;
     border-width: 4px;
     border-color: black;
-    border-radius: 0;
+    border-radius: 10px;
 }
 
 #menu {
@@ -84,16 +85,17 @@ select, button {
     background-color: #D7D6D8;
     color: black;
     font-family: 'Architects Daughter', cursive, Arial, Helvetica, sans-serif;
-    border-radius: 10%;
+    border-style: solid;
+    border-width: 4px;
+    border-radius: 10px;
+    border-color: black;
     opacity: .7;
     cursor: pointer;
     transition: 100ms;
+    background-color: #E6E2E2;
 }
 
 button {
-    border-style:solid;
-    border-width: 2px;
-    background-color: #E6E2E2;
     box-shadow: 0px 3px 5px #555454;
 }
 select:hover, button:hover {
@@ -103,8 +105,6 @@ select:hover, button:hover {
 
 select {
     margin-left: 20px;
-    border-style: solid;
-    border-width: 2px;
 }
 
 #button {
@@ -139,7 +139,6 @@ select {
     align-content:space-around;
     padding: 20px;
     height: 80vh;
-    border-radius: 10%;
 }
 
 .results-container {
@@ -183,7 +182,6 @@ select {
     text-align: center;
     font-size: x-large;
     margin: 10px;
-    border-radius: 5%;
 }
 
 .results button {
@@ -199,7 +197,6 @@ select {
 .podium {
     display: flex;
     flex-direction: column;
-    border-radius: 5%;
     width: 75%;
     text-align: center;
     font-size: xx-large;
@@ -220,7 +217,7 @@ select {
 }
 
 
-/* **********MEDIA WIDTH CHANGES********** */
+/* **********MEDIA CHANGES for 1110px, 800px, 650px, 450px********** */
 
 @media only screen and (max-width: 1110px) {
     #menu {
