--- a/mainpagestyles.css
+++ b/mainpagestyles.css
@@ -5,6 +5,7 @@ body {
     flex-direction: column;
     margin: 0 auto;
     max-width: 80%;
+    height: 90vh;
     font-family: 'Architects Daughter', cursive, Arial, Helvetica, sans-serif;
 }
 
@@ -40,7 +41,17 @@ body {
 
 .header-link {
     display: flex;
-    margin: 2px;
+    text-decoration: none;
+    margin: 0 5px;
+    transition: 100ms;
+}
+
+.header-link:visited {
+    color: black;
+}
+
+.header-link:hover {
+    transform: scale(1.1);
 }
 
 /* **********NAV BAR STYLING********** */
@@ -133,7 +144,7 @@ select {
     justify-items: center;
     align-content:space-around;
     padding: 20px;
-    height: 80vh;
+    height: 100%;
 }
 
 .results-container {
@@ -214,7 +225,18 @@ select {
     height: 35%;
 }
 
-/* **********MEDIA CHANGES for 800px, 500px, 400px********** */
+/* **********MEDIA CHANGES for 1200px, 800px, 500px, 400px********** */
+
+@media only screen and (max-width: 1200px) {
+    
+    .results {
+        font-size: medium;
+    }
+
+    .podium {
+        font-size: medium;
+    }
+}
 
 @media only screen and (max-width: 800px) {
 
