--- a/mainpagestyles.css
+++ b/mainpagestyles.css
@@ -77,6 +77,7 @@ body {
     width: 100%;
     justify-content: space-around;
     align-content: space-around;
+    align-items: center;
     font-size: x-large;
     font-weight: bold;
 }
