fixed 400px breakpoint nav styling

--- a/mainpagestyles.css
+++ b/mainpagestyles.css
@@ -303,6 +303,7 @@ select {
     #drop-down {
         display: flex;
         flex-direction: column;
+        align-items: stretch;
         font-size: medium;
     }
 
