--- a/driverpagestyles.css
+++ b/driverpagestyles.css
@@ -35,6 +35,7 @@ body {
 .header-link {
     display: flex;
     text-decoration: none;
+    color: black;
     margin: 0 5px;
     transition: 100ms;
 }
